--- a/index.html
+++ b/index.html
@@ -16,16 +16,82 @@
  
 
         <main>
-            <section>
+            <section class="formulaire">
                 <form method="post" action="#">
-                    <div class="formulaire">
+                    <div class="recherche">
                         <label for="recherche" class="location"><i class="fa-sharp fa-solid fa-location-dot" ></i></label>
-                        <input type="search" id="adresse" name="adresse" placeholder="Paris, Belleville" class="formulaire__adresse">
+                        <input type="search" id="adresse" name="adresse" placeholder="Paris, Belleville" class="recherche__adresse">
                     </div>
                 </form>
+                <div class="form">
+                    <h2 class="form__title">Réservez le menu qui vous convient</h2>
+                    <p class="form__subtitle">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
+                    <div class="form__btn">
+                        <button class="btn-explorez">Explorer nos restaurants</button>
+                    </div>
+                </div>
             </section>
-            <h1>resto</h1>
-            <p class="resto">fgfgfhgjh</p>
+            <section class="fonctionnement">
+                <h2 class="fonctionnement__title">Fonctionnement</h2>
+                <div class="btn-acceuil">
+                    <a href="#">
+                        <button class="btn-acceuil__menu">
+                            <i class="fa-solid fa-mobile-screen-button color"></i><strong>Choisissez un restaurant</strong>
+                        </button>
+                    </a>
+                    <a href="#">
+                        <button class="btn-acceuil__menu">
+                            <i class="fa-solid fa-list color"></i><strong>votre menu</strong>
+                        </button>
+                    </a>
+                    <a href="#">
+                        <button class="btn-acceuil__menu">
+                            <i class="fa-solid fa-store color"></i><strong>Dégustez au restaurant</strong>
+                        </button>
+                    </a>
+                </div>
+            </section>
+            <section class="list-resto">
+                <h2>Restaurants</h2>
+                <div class="restaurant">
+                    <article class="restaurant__article">
+                        <figure class="restaurant__cards">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
+                            <figcaption class="restaurant__nom">
+                                <h4>La palette du goût</h4>
+                                <p>Ménilmontant</p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                    <article class="restaurant__article">
+                        <figure class="restaurant__cards">
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
+                            <figcaption class="restaurant__nom">
+                                <h4>La note enchantée</h4>
+                                <p>Charonne</p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                    <article class="restaurant__article">
+                        <figure class="restaurant__cards">
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
+                            <figcaption class="restaurant__nom">
+                                <h4>À la française</h4>
+                                <p>Cité Rouge</p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                    <article class="restaurant__article">
+                        <figure class="restaurant__cards">
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
+                            <figcaption class="restaurant__nom">
+                                <h4>Le délice des sens</h4>
+                                <p>Folie-Méricourt</p>
+                            </figcaption>
+                        </figure>
+                    </article>
+                </div>
+            </section>
         </main>
       
         <footer class="footer">
