page accueil sans animations

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </a>
                     <a href="#">
                         <button class="btn-acceuil__menu">
-                            <i class="fa-solid fa-list color"></i><strong>votre menu</strong>
+                            <i class="fa-solid fa-list color"></i><strong>Composez votre menu</strong>
                         </button>
                     </a>
                     <a href="#">
@@ -55,40 +55,48 @@
                 <h2>Restaurants</h2>
                 <div class="restaurant">
                     <article class="restaurant__article">
-                        <figure class="restaurant__cards">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
-                            <figcaption class="restaurant__nom">
-                                <h4>La palette du goût</h4>
-                                <p>Ménilmontant</p>
-                            </figcaption>
-                        </figure>
+                        <a href="#">
+                            <figure class="restaurant__cards">
+                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
+                                <figcaption class="restaurant__nom">
+                                    <h4>La palette du goût</h4>
+                                    <p>Ménilmontant</p>
+                                </figcaption>
+                            </figure>
+                        </a>
                     </article>
                     <article class="restaurant__article">
-                        <figure class="restaurant__cards">
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
-                            <figcaption class="restaurant__nom">
-                                <h4>La note enchantée</h4>
-                                <p>Charonne</p>
-                            </figcaption>
-                        </figure>
+                        <a href="#">
+                            <figure class="restaurant__cards">
+                                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
+                                <figcaption class="restaurant__nom">
+                                    <h4>La note enchantée</h4>
+                                    <p>Charonne</p>
+                                </figcaption>
+                            </figure>
+                        </a>
                     </article>
                     <article class="restaurant__article">
-                        <figure class="restaurant__cards">
-                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
-                            <figcaption class="restaurant__nom">
-                                <h4>À la française</h4>
-                                <p>Cité Rouge</p>
-                            </figcaption>
-                        </figure>
+                        <a href="#">
+                            <figure class="restaurant__cards">
+                                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
+                                <figcaption class="restaurant__nom">
+                                    <h4>À la française</h4>
+                                    <p>Cité Rouge</p>
+                                </figcaption>
+                            </figure>
+                        </a>
                     </article>
                     <article class="restaurant__article">
-                        <figure class="restaurant__cards">
-                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
-                            <figcaption class="restaurant__nom">
-                                <h4>Le délice des sens</h4>
-                                <p>Folie-Méricourt</p>
-                            </figcaption>
-                        </figure>
+                        <a href="#">
+                            <figure class="restaurant__cards">
+                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
+                                <figcaption class="restaurant__nom">
+                                    <h4>Le délice des sens</h4>
+                                    <p>Folie-Méricourt</p>
+                                </figcaption>
+                            </figure>
+                        </a>
                     </article>
                 </div>
             </section>
