--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-utensils"></i><a>Proposer un restaurant</a></li>
                     <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-handshake-angle"></i><a>Devenir partenaire</a></li>
                     <li class="menu-footer__link"><a>Mentions légales</a></li>
-                    <li class="menu-footer__link"><a>Contact</a></li>
+                    <li class="menu-footer__link"><a href="mail">Contact</a></li>
                 </ul>
             </nav>
         </footer>
