--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
         <link rel="stylesheet" href="css/styles.css">
-        <title>accueil</title>
+        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico">
+        <title>Ohmyfood - Accueil</title>
     </head>
     <body>
         <header>
@@ -24,7 +25,7 @@
                     </div>
                 </form>
                 <div class="form">
-                    <h2 class="form__title">Réservez le menu qui vous convient</h2>
+                    <h1 class="form__title">Réservez le menu qui vous convient</h1>
                     <p class="form__subtitle">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
                     <div class="form__btn">
                         <button class="btn-explorez">Explorer nos restaurants</button>
@@ -34,21 +35,18 @@
             <section class="fonctionnement">
                 <h2 class="fonctionnement__title">Fonctionnement</h2>
                 <div class="btn-acceuil">
-                    <a href="#">
                         <button class="btn-acceuil__menu">
+                            <p class="number">1</p>
                             <i class="fa-solid fa-mobile-screen-button color"></i><strong>Choisissez un restaurant</strong>
                         </button>
-                    </a>
-                    <a href="#">
                         <button class="btn-acceuil__menu">
+                            <p class="number">2</p>
                             <i class="fa-solid fa-list color"></i><strong>Composez votre menu</strong>
                         </button>
-                    </a>
-                    <a href="#">
-                        <button class="btn-acceuil__menu">
-                            <i class="fa-solid fa-store color"></i><strong>Dégustez au restaurant</strong>
+                        <button class="btn-acceuil__menu btn-acceuil__menu--3">
+                            <p class="number">3</p>
+                            <i class="fa-solid fa-store color color--3"></i><strong>Dégustez au restaurant</strong>
                         </button>
-                    </a>
                 </div>
             </section>
             <section class="list-resto">
@@ -57,10 +55,13 @@
                     <article class="restaurant__article">
                         <a href="#">
                             <figure class="restaurant__cards">
+                                <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
+                                    <i class="fa-regular fa-heart heart"></i>
+                                    <i class="fa-solid fa-heart heart-hover"></i>
                                     <h4>La palette du goût</h4>
-                                    <p>Ménilmontant</p>
+                                    <h5>Ménilmontant</h5>
                                 </figcaption>
                             </figure>
                         </a>
@@ -68,10 +69,13 @@
                     <article class="restaurant__article">
                         <a href="#">
                             <figure class="restaurant__cards">
+                                <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
+                                    <i class="fa-regular fa-heart heart"></i>
+                                    <i class="fa-solid fa-heart heart-hover"></i>
                                     <h4>La note enchantée</h4>
-                                    <p>Charonne</p>
+                                    <h5>Charonne</h5>
                                 </figcaption>
                             </figure>
                         </a>
@@ -81,8 +85,10 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
+                                    <i class="fa-regular fa-heart heart"></i>
+                                    <i class="fa-solid fa-heart heart-hover"></i>
                                     <h4>À la française</h4>
-                                    <p>Cité Rouge</p>
+                                    <h5>Cité Rouge</h5>
                                 </figcaption>
                             </figure>
                         </a>
@@ -92,8 +98,11 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
+                                    <i class="fa-regular fa-heart heart"></i>
+                                    <i class="fa-solid fa-heart heart-hover"></i>
+                                    
                                     <h4>Le délice des sens</h4>
-                                    <p>Folie-Méricourt</p>
+                                    <h5>Folie-Méricourt</h5>
                                 </figcaption>
                             </figure>
                         </a>
@@ -109,7 +118,7 @@
                     <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-utensils"></i><a>Proposer un restaurant</a></li>
                     <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-handshake-angle"></i><a>Devenir partenaire</a></li>
                     <li class="menu-footer__link"><a>Mentions légales</a></li>
-                    <li class="menu-footer__link"><a href="mail">Contact</a></li>
+                    <li class="menu-footer__link"><a href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
                 </ul>
             </nav>
         </footer>
