dossiers et fichiers pour séparer le contenu sass de main.scss

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                         <input type="search" id="adresse" name="adresse" placeholder="Paris, Belleville" class="recherche__adresse">
                     </div>
                 </form>
-                <div class="form">
-                    <h1 class="form__title">Réservez le menu qui vous convient</h1>
-                    <p class="form__subtitle">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-                    <div class="form__btn">
+                <div class="explorer-restos">
+                    <h1 class="explorer-restos__title">Réservez le menu qui vous convient</h1>
+                    <p class="explorer-restos__subtitle">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
+                    <div class="explorer-restos__btn">
                         <button class="btn-explorez">Explorer nos restaurants</button>
                     </div>
                 </div>
