--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                         <input type="search" id="adresse" name="adresse" placeholder="Paris, Belleville" class="recherche__adresse">
                     </div>
                 </form>
-                <div class="explorer-restos">
+            </section>
+            <section class="explorer-restos">
                     <h1 class="explorer-restos__title">Réservez le menu qui vous convient</h1>
                     <p class="explorer-restos__subtitle">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
                     <div class="explorer-restos__btn">
                         <button class="btn-explorez">Explorer nos restaurants</button>
                     </div>
-                </div>
             </section>
             <section class="fonctionnement">
                 <h2 class="fonctionnement__title">Fonctionnement</h2>
@@ -58,8 +58,8 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart heart"></i>
-                                    <i class="fa-solid fa-heart heart-hover"></i>
+                                    <i class="fa-regular fa-heart heart-index"></i>
+                                    <i class="fa-solid fa-heart heart-hover-index"></i>
                                     <h4>La palette du goût</h4>
                                     <h5>Ménilmontant</h5>
                                 </figcaption>
@@ -72,8 +72,8 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart heart"></i>
-                                    <i class="fa-solid fa-heart heart-hover"></i>
+                                    <i class="fa-regular fa-heart heart-index"></i>
+                                    <i class="fa-solid fa-heart heart-hover-index"></i>
                                     <h4>La note enchantée</h4>
                                     <h5>Charonne</h5>
                                 </figcaption>
@@ -85,8 +85,8 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart heart"></i>
-                                    <i class="fa-solid fa-heart heart-hover"></i>
+                                    <i class="fa-regular fa-heart heart-index"></i>
+                                    <i class="fa-solid fa-heart heart-hover-index"></i>
                                     <h4>À la française</h4>
                                     <h5>Cité Rouge</h5>
                                 </figcaption>
@@ -98,9 +98,8 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart heart"></i>
-                                    <i class="fa-solid fa-heart heart-hover"></i>
-                                    
+                                    <i class="fa-regular fa-heart heart-index"></i>
+                                    <i class="fa-solid fa-heart heart-hover-index"></i>
                                     <h4>Le délice des sens</h4>
                                     <h5>Folie-Méricourt</h5>
                                 </figcaption>
