--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -6,14 +6,21 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
         <link rel="icon" sizes="16x16" href="images/logo/favicon.ico">
         <link rel="stylesheet" href="css/styles.css">
-        <title>accueil</title>
+        <title>Ohmyfood - La palette du goût</title>
     </head>
-
+    <header>
+        <div class="image-header">
+            <a href="index.html"><i class="fa-solid fa-arrow-left arrow-left"></i></a>
+            <img class="image-header__logo" src="images/logo/ohmyfood.png" alt="logo-resto">
+        </div>
+    </header>
     <main>
-
-
-
-        
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto_palette_du_goût" class="image_restaurant">
+        <form>
+            <h1>La palette du goût</h1>
+            <i class="fa-regular fa-heart heart-index"></i>
+            <i class="fa-solid fa-heart heart-hover-index"></i>
+        </form>
     </main>
     <footer class="footer">
         <h6 class="footer__title">ohmyfood</h6>
