--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -8,18 +8,125 @@
         <link rel="stylesheet" href="css/styles.css">
         <title>Ohmyfood - La palette du goût</title>
     </head>
-    <header>
-        <div class="image-header">
-            <a href="index.html"><i class="fa-solid fa-arrow-left arrow-left"></i></a>
-            <img class="image-header__logo" src="images/logo/ohmyfood.png" alt="logo-resto">
-        </div>
+    <header class="header">
+        <a href="index.html"><i class="fa-solid fa-arrow-left header__arrow"></i></a>
+        <img class="header__logo" src="images/logo/ohmyfood.png" alt="logo-resto">
     </header>
     <main>
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto_palette_du_goût" class="image_restaurant">
-        <form>
-            <h1>La palette du goût</h1>
-            <i class="fa-regular fa-heart heart-index"></i>
-            <i class="fa-solid fa-heart heart-hover-index"></i>
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette_du_goût" class="image-restaurant">
+            
+        <div class="header-form">
+            <h1 class="header-form__title">La palette du goût</h1>
+            <i class="fa-regular fa-heart heart border-heart"></i>
+            <i class="fa-solid fa-heart heart-colorer"></i>
+        </div>
+            
+
+        <form method="post" action="#">
+            <fieldset class="section-form">
+                <legend class="section-form__titre">ENTRÉES</legend>
+                <label for="fricassee-escargot">
+                    <div class="label-checkbox">
+                        <h4>Fricassée d'escargots</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>Au piment d'Espelette</h6>
+                            <h5>25€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="fricassee-escargot" id="fricassee-escargot" class="hidden">
+                <label for="foie-canard">
+                    <div class="label-checkbox">
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>Et ses copeaux de truffe noire</h6>
+                            <h5>35€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="foie-canard" id="foie-canard" class="hidden">
+                <label for="oeuf-plat">
+                    <div class="label-checkbox">
+                        <h4>Oeuf au plat</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>Assaisonné à la truffe sur lit de caviar</h6>
+                            <h5>20€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="oeuf-plat" id="oeuf-plat" class="hidden">
+            </fieldset>
+
+
+            <fieldset class="section-form">
+                <legend class="section-form__titre section-form__titre--plats">PLATS</legend>
+                <label for="filet-boeuf">
+                    <div class="label-checkbox">
+                        <h4>Filet de boeuf aux herbes</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>Accompagné de sa ribambelle de légumes</h6>
+                            <h5>40€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="filet-boeuf" id="filet-boeuf" class="hidden">
+                <label for="parmentier">
+                    <div class="label-checkbox">
+                        <h4>Parmentier de queue de boeuf</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>À la truffe noire sur sa purée de panais</h6>
+                            <h5>35€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="parmentier" id="parmentier" class="hidden">
+                <label for="filet-turbo">
+                    <div class="label-checkbox">
+                        <h4>Filet de turbot</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>Aux agrumes</h6>
+                            <h5>44€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="filet-turbo" id="filet-turbo" class="hidden">
+            </fieldset>
+
+            <fieldset class="section-form">
+                <legend class="section-form__titre">DESSERTS</legend>
+                <label for="paris-brest">
+                    <div class="label-checkbox">
+                        <h4>Paris-Brest</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>Revisité</h6>
+                            <h5>18€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="paris-brest" id="paris-brest" class="hidden">
+                <label for="Macaron-chocolat">
+                    <div class="label-checkbox">
+                        <h4>Macaron au chocolat d'exeption</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>Et glace à la vanille de Madagascar</h6>
+                            <h5>22€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="Macaron-chocolat" id="Macaron-chocolat" class="hidden">
+                <label for="mousse-chocolat">
+                    <div class="label-checkbox">
+                        <h4>Mousse au chocolat</h4>
+                        <div class="label-checkbox__align-prix">
+                            <h6>Au piment d'Espelette et à  la truffe noire</h6>
+                            <h5>23€</h5>
+                        </div>
+                    </div>
+                </label>
+                <input type="checkbox" name="mousse-chocolat" id="mousse-chocolat" class="hidden">
+            </fieldset>
+            <input type="submit" class="envoyer" value="Commander">
+
         </form>
     </main>
     <footer class="footer">
