animation apparition plat

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -23,7 +23,7 @@
             
 
         <form method="post" action="#">
-            <fieldset class="section-form">
+            <fieldset class="section-form section-form--entree">
                 <legend class="section-form__titre">ENTRÉES</legend>
                 <label for="fricassee-escargot">
                     <div class="label-checkbox">
@@ -58,7 +58,7 @@
             </fieldset>
 
 
-            <fieldset class="section-form">
+            <fieldset class="section-form section-form--plat">
                 <legend class="section-form__titre section-form__titre--plats">PLATS</legend>
                 <label for="filet-boeuf">
                     <div class="label-checkbox">
@@ -92,7 +92,7 @@
                 <input type="checkbox" name="filet-turbo" id="filet-turbo" class="hidden">
             </fieldset>
 
-            <fieldset class="section-form">
+            <fieldset class="section-form section-form--dessert">
                 <legend class="section-form__titre">DESSERTS</legend>
                 <label for="paris-brest">
                     <div class="label-checkbox">
@@ -125,6 +125,7 @@
                 </label>
                 <input type="checkbox" name="mousse-chocolat" id="mousse-chocolat" class="hidden">
             </fieldset>
+
             <input type="submit" class="envoyer" value="Commander">
 
         </form>
