--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -17,8 +17,8 @@
             
         <div class="header-form">
             <h1 class="header-form__title">La palette du goût</h1>
-            <i class="fa-regular fa-heart heart border-heart"></i>
-            <i class="fa-solid fa-heart heart-colorer"></i>
+            <i class="fa-regular fa-heart heart border-heart border-heart--heart"></i>
+            <i class="fa-solid fa-heart heart-colorer heart-colorer--heart"></i>
         </div>
             
 
@@ -27,6 +27,7 @@
                 <legend class="section-form__titre">ENTRÉES</legend>
                 <label for="fricassee-escargot">
                     <div class="label-checkbox">
+                        <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Fricassée d'escargots</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>Au piment d'Espelette</h6>
@@ -37,6 +38,7 @@
                 <input type="checkbox" name="fricassee-escargot" id="fricassee-escargot" class="hidden">
                 <label for="foie-canard">
                     <div class="label-checkbox">
+                    <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Foie gras de canard mi-cuit</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>Et ses copeaux de truffe noire</h6>
@@ -47,6 +49,7 @@
                 <input type="checkbox" name="foie-canard" id="foie-canard" class="hidden">
                 <label for="oeuf-plat">
                     <div class="label-checkbox">
+                        <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Oeuf au plat</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>Assaisonné à la truffe sur lit de caviar</h6>
@@ -62,6 +65,7 @@
                 <legend class="section-form__titre section-form__titre--plats">PLATS</legend>
                 <label for="filet-boeuf">
                     <div class="label-checkbox">
+                        <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Filet de boeuf aux herbes</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>Accompagné de sa ribambelle de légumes</h6>
@@ -72,6 +76,7 @@
                 <input type="checkbox" name="filet-boeuf" id="filet-boeuf" class="hidden">
                 <label for="parmentier">
                     <div class="label-checkbox">
+                        <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Parmentier de queue de boeuf</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>À la truffe noire sur sa purée de panais</h6>
@@ -82,6 +87,7 @@
                 <input type="checkbox" name="parmentier" id="parmentier" class="hidden">
                 <label for="filet-turbo">
                     <div class="label-checkbox">
+                        <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Filet de turbot</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>Aux agrumes</h6>
@@ -96,6 +102,7 @@
                 <legend class="section-form__titre">DESSERTS</legend>
                 <label for="paris-brest">
                     <div class="label-checkbox">
+                        <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Paris-Brest</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>Revisité</h6>
@@ -106,6 +113,7 @@
                 <input type="checkbox" name="paris-brest" id="paris-brest" class="hidden">
                 <label for="Macaron-chocolat">
                     <div class="label-checkbox">
+                        <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Macaron au chocolat d'exeption</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>Et glace à la vanille de Madagascar</h6>
@@ -116,6 +124,7 @@
                 <input type="checkbox" name="Macaron-chocolat" id="Macaron-chocolat" class="hidden">
                 <label for="mousse-chocolat">
                     <div class="label-checkbox">
+                        <i class="fa-solid fa-circle-check onglet-check"></i>
                         <h4>Mousse au chocolat</h4>
                         <div class="label-checkbox__align-prix">
                             <h6>Au piment d'Espelette et à  la truffe noire</h6>
@@ -134,10 +143,10 @@
         <h6 class="footer__title">ohmyfood</h6>
         <nav>
             <ul class="menu-footer">
-                <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
-                <li class="menu-footer__link"><a href="#">Mentions légales</a></li>
-                <li class="menu-footer__link"><a href="mail">Contact</a></li>
+                <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-utensils"></i><a>Proposer un restaurant</a></li>
+                <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-handshake-angle"></i><a>Devenir partenaire</a></li>
+                <li class="menu-footer__link"><a>Mentions légales</a></li>
+                <li class="menu-footer__link"><a href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
             </ul>
         </nav>
     </footer>
