animation plat et code corrigé pour label du formulaire

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>Restaurants</h2>
                 <div class="restaurant">
                     <article class="restaurant__article">
-                        <a href="#">
+                        <a href="la_palette_du_gout.html">
                             <figure class="restaurant__cards">
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
