animation plat et code corrigé pour label du formulaire

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -30,7 +30,7 @@
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="fricassee-escargot">Fricassée d'escargots</label> 
+                <label for="fricassee-escargot" class="label">Fricassée d'escargots</label> 
                     <dl class="fieldset__align-prix">
                         <dt>Au piment d'Espelette</dt>
                         <dd><h6>25€</h6>
@@ -43,7 +43,7 @@
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="foie-canard">Foie gras de canard mi-cuit</label> 
+                <label for="foie-canard" class="label">Foie gras de canard mi-cuit</label> 
                     <dl class="fieldset__align-prix">
                         <dt>Et ses copeaux de truffe noire</dt>
                         <dd><h6>35€</h6>
@@ -55,7 +55,7 @@
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="oeuf-plat">Oeuf au plat</label> 
+                <label for="oeuf-plat" class="label">Oeuf au plat</label> 
                     <dl class="fieldset__align-prix">
                         <dt>Assaisonné à la truffe sur lit de caviar</dt>
                         <dd><h6>20€</h6>
@@ -65,12 +65,12 @@
         </section>                
 
         <section>
-            <h2 class="titre-section titre-section--plat">PLATS</h2>
+            <h2 class="titre-section titre-section--espace titre-section--plat">PLATS</h2>
             <fieldset class="fieldset fieldset--plat-1">
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="filet-boeuf">Filet de boeuf aux herbes</label> 
+                <label for="filet-boeuf" class="label">Filet de boeuf aux herbes</label> 
                     <dl class="fieldset__align-prix">
                         <dt>Accompagné de sa ribambelle de légumes</dt>
                         <dd><h6>40€</h6>
@@ -83,7 +83,7 @@
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="parmentier-boeuf">Parmentier de queue de boeuf</label> 
+                <label for="parmentier-boeuf" class="label">Parmentier de queue de boeuf</label> 
                     <dl class="fieldset__align-prix">
                         <dt>À la truffe noire sur sa purée de panais</dt>
                         <dd><h6>35€</h6>
@@ -95,7 +95,7 @@
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="filet-turbo">Filet de turbot</label> 
+                <label for="filet-turbo" class="label">Filet de turbot</label> 
                     <dl class="fieldset__align-prix">
                         <dt>Aux agrumes</dt>
                         <dd><h6>18€</h6>
@@ -110,7 +110,7 @@
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="Paris-Brest">Paris-Brest</label> 
+                <label for="Paris-Brest" class="label">Paris-Brest</label> 
                     <dl class="fieldset__align-prix">
                         <dt>Revisité</dt>
                         <dd><h6>18€</h6>
@@ -123,7 +123,7 @@
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="Macaron-chocolat">Macaron au chocolat d'exception</label> 
+                <label for="Macaron-chocolat" class="label">Macaron au chocolat d'exception</label> 
                     <dl class="fieldset__align-prix">
                         <dt>Et glace à la vanille de Madagascar</dt>
                         <dd><h6>22€</h6>
@@ -135,7 +135,7 @@
                 <button class="btn-check">
                     <i class="fa-solid fa-circle-check btn-check__icon"></i>
                 </button>
-                <label for="Mousse-chocolat">Mousse au chocolat</label> 
+                <label for="Mousse-chocolat" class="label">Mousse au chocolat</label> 
                     <dl class="fieldset__align-prix">
                         <dt>Au piment d'Espelette et à la truffe noire</dt>
                         <dd><h6>23€</h6>
