animation icon-check plat

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -9,7 +9,11 @@
         <title>Ohmyfood - La palette du goût</title>
     </head>
     <header class="header">
-        <a href="index.html"><i class="fa-solid fa-arrow-left header__arrow"></i></a>
+        <btn class="header__arrow">
+            <a href="index.html">
+                <i class="fa-solid fa-arrow-left arrow-left"></i>
+            </a>
+        </btn>
         <img class="header__logo" src="images/logo/ohmyfood.png" alt="logo-resto">
     </header>
     <main>
