animation coeur dans btn

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -21,8 +21,12 @@
             
         <div class="header-form">
             <h1 class="header-form__title">La palette du goût</h1>
-            <i class="fa-regular fa-heart heart border-heart border-heart--heart"></i>
-            <i class="fa-solid fa-heart heart-colorer heart-colorer--heart"></i>
+            <button class="border-heart border-heart--heart">
+                <i class="fa-regular fa-heart heart"></i>
+            </button>
+            <button class="heart-colorer heart-colorer--heart">
+                <i class="fa-solid fa-heart heart"></i>
+            </button>
         </div>
             
 
