--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart border-heart"></i>
-                                    <i class="fa-solid fa-heart heart-colorer"></i>
+                                    <button class="border-heart">
+                                        <i class="fa-regular fa-heart heart"></i>
+                                    </button>
+                                    <button class="heart-colorer">
+                                        <i class="fa-solid fa-heart heart"></i>
+                                    </button>
                                     <h4>La palette du goût</h4>
                                     <h5>Ménilmontant</h5>
                                 </figcaption>
@@ -68,8 +72,12 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart border-heart"></i>
-                                    <i class="fa-solid fa-heart heart-colorer"></i>
+                                    <button class="border-heart">
+                                        <i class="fa-regular fa-heart heart"></i>
+                                    </button>
+                                    <button class="heart-colorer">
+                                        <i class="fa-solid fa-heart heart"></i>
+                                    </button>
                                     <h4>La note enchantée</h4>
                                     <h5>Charonne</h5>
                                 </figcaption>
@@ -81,8 +89,12 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart border-heart"></i>
-                                    <i class="fa-solid fa-heart heart-colorer"></i>
+                                    <button class="border-heart">
+                                        <i class="fa-regular fa-heart heart"></i>
+                                    </button>
+                                    <button class="heart-colorer">
+                                        <i class="fa-solid fa-heart heart"></i>
+                                    </button>
                                     <h4>À la française</h4>
                                     <h5>Cité Rouge</h5>
                                 </figcaption>
@@ -94,8 +106,12 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart border-heart"></i>
-                                    <i class="fa-solid fa-heart heart-colorer"></i>
+                                    <button class="border-heart">
+                                        <i class="fa-regular fa-heart heart"></i>
+                                    </button>
+                                    <button class="heart-colorer">
+                                        <i class="fa-solid fa-heart heart"></i>
+                                    </button>
                                     <h4>Le délice des sens</h4>
                                     <h5>Folie-Méricourt</h5>
                                 </figcaption>
