fichiers htmls et css conforme aux validation w3c

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -9,11 +9,11 @@
         <title>Ohmyfood - La palette du goût</title>
     </head>
     <header class="header">
-        <btn class="header__arrow">
+        <div class="header__arrow">
             <a href="index.html">
                 <i class="fa-solid fa-arrow-left arrow-left"></i>
             </a>
-        </btn>
+        </div>
         <img class="header__logo" src="images/logo/ohmyfood.png" alt="logo-resto">
     </header>
     <main>
