--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         
 
         <main>
-            <section class="formulaire">
+            <div class="formulaire">
                 <form method="post" action="#">
                     <div class="recherche">
-                        <label for="recherche" class="location"><i class="fa-sharp fa-solid fa-location-dot" ></i></label>
+                        <label for="adresse" class="location"><i class="fa-sharp fa-solid fa-location-dot" ></i></label>
                         <input type="search" id="adresse" name="adresse" placeholder="Paris, Belleville" class="recherche__adresse">
                     </div>
                 </form>
-            </section>
+            </div>
             <section class="explorer-restos">
                     <h1 class="explorer-restos__title">Réservez le menu qui vous convient</h1>
                     <p class="explorer-restos__subtitle">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
@@ -31,18 +31,19 @@
             <section class="fonctionnement">
                 <h2 class="fonctionnement__title">Fonctionnement</h2>
                 <div class="btn-acceuil">
-                        <button class="btn-acceuil__menu">
+                        <div class="btn-acceuil__menu">
                             <p class="number">1</p>
-                            <i class="fa-solid fa-mobile-screen-button color"></i><strong>Choisissez un restaurant</strong>
-                        </button>
-                        <button class="btn-acceuil__menu">
+                            <i class="fa-solid fa-mobile-screen-button color"></i>
+                            <strong class="text-number">Choisissez un restaurant</strong>
+                        </div>
+                        <div class="btn-acceuil__menu">
                             <p class="number">2</p>
                             <i class="fa-solid fa-list color"></i><strong>Composez votre menu</strong>
-                        </button>
-                        <button class="btn-acceuil__menu btn-acceuil__menu--3">
+                        </div>
+                        <div class="btn-acceuil__menu btn-acceuil__menu--3">
                             <p class="number">3</p>
                             <i class="fa-solid fa-store color color--3"></i><strong>Dégustez au restaurant</strong>
-                        </button>
+                        </div>
                 </div>
             </section>
             <section class="list-resto">
@@ -54,12 +55,8 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <button class="border-heart">
-                                        <i class="fa-regular fa-heart heart"></i>
-                                    </button>
-                                    <button class="heart-colorer">
-                                        <i class="fa-solid fa-heart heart"></i>
-                                    </button>
+                                        <i class="fa-regular fa-heart heart border-heart"></i>
+                                        <i class="fa-solid fa-heart heart heart-colorer"></i>
                                     <h4>La palette du goût</h4>
                                     <h5>Ménilmontant</h5>
                                 </figcaption>
@@ -72,12 +69,8 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <button class="border-heart">
-                                        <i class="fa-regular fa-heart heart"></i>
-                                    </button>
-                                    <button class="heart-colorer">
-                                        <i class="fa-solid fa-heart heart"></i>
-                                    </button>
+                                    <i class="fa-regular fa-heart heart border-heart"></i>
+                                    <i class="fa-solid fa-heart heart heart-colorer"></i>
                                     <h4>La note enchantée</h4>
                                     <h5>Charonne</h5>
                                 </figcaption>
@@ -89,12 +82,8 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <button class="border-heart">
-                                        <i class="fa-regular fa-heart heart"></i>
-                                    </button>
-                                    <button class="heart-colorer">
-                                        <i class="fa-solid fa-heart heart"></i>
-                                    </button>
+                                    <i class="fa-regular fa-heart heart border-heart"></i>
+                                    <i class="fa-solid fa-heart heart heart-colorer"></i>
                                     <h4>À la française</h4>
                                     <h5>Cité Rouge</h5>
                                 </figcaption>
@@ -106,12 +95,8 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <button class="border-heart">
-                                        <i class="fa-regular fa-heart heart"></i>
-                                    </button>
-                                    <button class="heart-colorer">
-                                        <i class="fa-solid fa-heart heart"></i>
-                                    </button>
+                                    <i class="fa-regular fa-heart heart border-heart"></i>
+                                    <i class="fa-solid fa-heart heart heart-colorer"></i>
                                     <h4>Le délice des sens</h4>
                                     <h5>Folie-Méricourt</h5>
                                 </figcaption>
