--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         
 
         <main>
+            <div class="load">
+                <i class="fa-solid fa-spinner fa-spin-pulse load__spinner"></i>
+            </div>
+
+
+            
             <div class="formulaire">
                 <form method="post" action="#" class="recherche">
                         <label for="adresse" class="location"><i class="fa-sharp fa-solid fa-location-dot" ></i></label>
