--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -14,12 +14,14 @@
                 <i class="fa-solid fa-arrow-left arrow-left"></i>
             </a>
     </header>
+
+
     <main>
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette_du_goût" class="image-restaurant">
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette_du_goût" class="image-restaurant"/>
             
         <div class="header-form">
             <h2 class="header-form__title">La palette du goût</h2>
-            <button class="heart">
+            <button class="heart heart--titre">
                 <i class="fa-regular fa-heart border-heart"></i>
                 <i class="fa-solid fa-heart heart-colorer"></i>
             </button>
@@ -35,37 +37,49 @@
                 <h3>Fricassée d'escargots</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>Au piment d'Espelette</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>Au piment d'Espelette</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>25€</h5></dd>
+                    <dd>
+                        <h5>25€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>
             <article class="cards-menu cards-menu--entree-2">
                 <h3>Foie gras de canard mi-cuit</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>Et ses copeaux de truffes noire</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>Et ses copeaux de truffes noire</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>35€</h5></dd>
+                    <dd>
+                        <h5>35€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>
             <article class="cards-menu cards-menu--entree-3">
                 <h3>Oeufs au plat</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>Assaissoné à la truffe sur lit de caviar</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>Assaissoné à la truffe sur lit de caviar</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>25€</h5></dd>
+                    <dd>
+                        <h5>25€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>            
         </section>                   
 
@@ -75,37 +89,49 @@
                 <h3>Filet de boeuf aux herbes</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>Accompagné de sa ribambelle de légumes</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>Accompagné de sa ribambelle de légumes</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>40€</h5></dd>
+                    <dd>
+                        <h5>40€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>
             <article class="cards-menu cards-menu--plat-2">
                 <h3>Parmentier de queue de boeuf</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>À la truffe noire sur sa purée de panais</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>À la truffe noire sur sa purée de panais</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>35€</h5></dd>
+                    <dd>
+                        <h5>35€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>
             <article class="cards-menu cards-menu--plat-3">
                 <h3>Filet de turbot</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>Au piment d'Espelette</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>Aux agrumes</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>44€</h5></dd>
+                    <dd>
+                        <h5>44€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>
         </section>
 
@@ -115,37 +141,49 @@
                 <h3>Paris-Brest</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>Revisité</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>Revisité</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>18€</h5></dd>
+                    <dd>
+                        <h5>18€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>
             <article class="cards-menu cards-menu--dessert-2">
                 <h3>Macaron au chocolat d'exception</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>Et glace à la vanille de Madagascar</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>Et glace à la vanille de Madagascar</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>22€</h5></dd>
+                    <dd>
+                        <h5>22€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>
             <article class="cards-menu cards-menu--dessert-3">
                 <h3>Mousse au chocolat</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
-                    <dd><h4>Au piment d'Espelette et à la truffe noire</h4></dd>
+                    <dd class="cards-menu__detail">
+                        <h4>Au piment d'Espelette et à la truffe noire</h4>
+                    </dd>
                     <dt class="hidden">prix</dt>
-                    <dd><h5>23€</h5></dd>
+                    <dd>
+                        <h5>23€</h5>
+                    </dd>
                 </dl>
-                <button class="btn-check">
-                    <i class="fa-solid fa-circle-check btn-check__icon"></i>
-                </button>
+                <div class="validation-plat">
+                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                </div>
             </article>
         </section>
 
