--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -9,10 +9,10 @@
         <title>Ohmyfood - La palette du goût</title>
     </head>
     <header>
-    <h1 class="header-title">ohmyfood</h1>
-            <a href="index.html" class="arrow">
-                <i class="fa-solid fa-arrow-left arrow-left"></i>
-            </a>
+        <h1 class="header-title">ohmyfood</h1>
+        <a href="index.html" class="header-return">
+            <i class="fa-solid fa-arrow-left header-return__arrow-left"></i>
+        </a>
     </header>
 
 
@@ -174,7 +174,7 @@
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
                     <dd class="cards-menu__detail">
-                        <h4>Myrtilles et pâte d’amande</h4>
+                        <h4 class="titre-gras">Myrtilles et pâte d’amande</h4>
                     </dd>
                     <dt class="hidden">prix</dt>
                     <dd>
