--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -9,10 +9,10 @@
         <title>Ohmyfood - La palette du goût</title>
     </head>
     <header>
-    <h1 class="header-title">ohmyfood</h1>
-            <a href="index.html" class="arrow">
-                <i class="fa-solid fa-arrow-left arrow-left"></i>
-            </a>
+        <h1 class="header-title">ohmyfood</h1>
+        <a href="index.html" class="header-return">
+            <i class="fa-solid fa-arrow-left header-return__arrow-left"></i>
+        </a>
     </header>
 
 
@@ -34,7 +34,7 @@
         <section>
             <h2 class="titre-section titre-section--entree">ENTRÉES</h2>
             <article class="cards-menu cards-menu--entree-1">
-                <h3>Ravioles de foies gras</h3> 
+                <h3>Ravioles de foie gras</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
                     <dd class="cards-menu__detail">
@@ -174,7 +174,7 @@
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
                     <dd class="cards-menu__detail">
-                        <h4>Avec son colis de citron</h4>
+                        <h4>Avec son coulis de citron</h4>
                     </dd>
                     <dt class="hidden">prix</dt>
                     <dd>
