--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -9,10 +9,10 @@
         <title>Ohmyfood - La palette du goût</title>
     </head>
     <header>
-    <h1 class="header-title">ohmyfood</h1>
-            <a href="index.html" class="arrow">
-                <i class="fa-solid fa-arrow-left arrow-left"></i>
-            </a>
+        <h1 class="header-title">ohmyfood</h1>
+        <a href="index.html" class="header-return">
+            <i class="fa-solid fa-arrow-left header-return__arrow-left"></i>
+        </a>
     </header>
 
 
@@ -54,7 +54,7 @@
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
                     <dd class="cards-menu__detail">
-                        <h4>Et ses copeaux de truffes noire</h4>
+                        <h4>Et ses copeaux de truffe noire</h4>
                     </dd>
                     <dt class="hidden">prix</dt>
                     <dd>
@@ -66,7 +66,7 @@
                 </div>
             </article>
             <article class="cards-menu cards-menu--entree-3">
-                <h3>Oeufs au plat</h3> 
+                <h3>Oeuf au plat</h3> 
                 <dl class="cards-menu__align-prix">
                     <dt class="hidden">détail</dt>
                     <dd class="cards-menu__detail">
@@ -74,7 +74,7 @@
                     </dd>
                     <dt class="hidden">prix</dt>
                     <dd>
-                        <h5>25€</h5>
+                        <h5>20€</h5>
                     </dd>
                 </dl>
                 <div class="validation-plat">
