dossier tablette site commande plat en version tablette

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -17,7 +17,7 @@
 
 
     <main>
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="delice_sens" class="image-restaurant"/>
+        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la_francaise" class="image-restaurant"/>
             
         <div class="header-form">
             <h2 class="header-form__title">À la française</h2>
