--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="la_palette_du_gout.html">
                             <figure class="restaurant__cards">
                                 <p class="nouveau">Nouveau</p>
-                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
+                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto"/>
                                 <figcaption class="restaurant__nom">
                                     <h4>La palette du goût</h4>
                                     <h5>Ménilmontant</h5>
@@ -77,7 +77,7 @@
                         <a href="la_note_enchantee.html">
                             <figure class="restaurant__cards">
                                 <p class="nouveau">Nouveau</p>
-                                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
+                                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto"/>
                                 <figcaption class="restaurant__nom">
                                     <h4>La note enchantée</h4>
                                     <h5>Charonne</h5>
@@ -92,7 +92,7 @@
                     <article class="restaurant__article">
                         <a href="a_la_francaise.html">
                             <figure class="restaurant__cards">
-                                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
+                                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto"/>
                                 <figcaption class="restaurant__nom">
                                     <h4>À la française</h4>
                                     <h5>Cité Rouge</h5>
@@ -107,7 +107,7 @@
                     <article class="restaurant__article">
                         <a href="le_delice_des_sens.html">
                             <figure class="restaurant__cards">
-                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
+                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto"/>
                                 <figcaption class="restaurant__nom">
                                     <h4>Le délice des sens</h4>
                                     <h5>Folie-Méricourt</h5>
