--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -17,7 +17,7 @@
 
 
     <main>
-        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="la_francaise" class="image-restaurant"/>
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="delice_des_sens" class="image-restaurant"/>
             
         <div class="header-form">
             <h2 class="header-form__title">Le délice des sens</h2>
