lien # dans les balises <a> (pb couleur navigateur)

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -195,9 +195,9 @@
         <h6 class="footer__title">ohmyfood</h6>
         <nav>
             <ul class="menu-footer">
-                <li class="menu-footer__link menu-footer__link--icon"><a><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                <li class="menu-footer__link menu-footer__link--icon"><a><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                <li class="menu-footer__link"><a>Mentions légales</a></li>
+                <li class="menu-footer__link menu-footer__link--icon"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li class="menu-footer__link menu-footer__link--icon"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                <li class="menu-footer__link"><a href="#">Mentions légales</a></li>
                 <li class="menu-footer__link"><a href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
             </ul>
         </nav>
