fichiers renommées + nouveaux dossiers component et deskop (pb couleur navigateur)

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
                 <div class="fonctionnement__site">
                     <ul>
                         <li class="explication">
-                            <p class="explication__number">1</p>
+                            <p class="explication__number explication__number--1">1</p>
                             <i class="fa-solid fa-mobile-screen-button explication__icon"></i>
                             <strong class="explication__text">Choisissez un restaurant</strong>
                         </li>
                         <li class="explication">
-                            <p class="explication__number">2</p>
+                            <p class="explication__number explication__number--2">2</p>
                             <i class="fa-solid fa-list explication__icon"></i>
                             <strong class="explication__text">Composez votre menu</strong>
                         </li>
                         <li class="explication explication--3">
-                            <p class="explication__number">3</p>
+                            <p class="explication__number explication__number--3">3</p>
                             <i class="fa-solid fa-store explication__icon explication__icon--3"></i>
                             <strong class="explication__text">Dégustez au restaurant</strong>
                         </li>
