corection erreur 'plat'

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -179,7 +179,7 @@
                     <dl class="cards-menu__align-prix">
                         <dt class="hidden">détail</dt>
                         <dd class="cards-menu__detail">
-                            <h5 class="titre-gras">Myrtilles et pâte d’amande</h5>
+                            <h5>Myrtilles et pâte d’amande</h5>
                         </dd>
                         <dt class="hidden">prix</dt>
                         <dd>
