--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -87,7 +87,7 @@
         </section>                   
 
         <section>
-            <h3 class="titre-section titre-section--espace titre-section--plat">PLATS</h3>
+            <h3 class="titre-section titre-section--plat">PLATS</h3>
             <div class="flex-article">
                 <article class="cards-menu cards-menu--plat-1">
                     <h4>Poulet rôti aux herbes de Provence</h4> 
