--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -86,7 +86,7 @@
         </section>                   
 
         <section>
-            <h3 class="titre-section titre-section--espace titre-section--plat">PLATS</h3>
+            <h3 class="titre-section titre-section--plat">PLATS</h3>
             <div class="flex-article">
                 <article class="cards-menu cards-menu--plat-1">
                     <h4>Filet de boeuf aux herbes</h4> 
