--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -29,7 +29,7 @@
         </div>
             
 
-        <form method="post" action="#">
+        <form method="get" action="#">
 
         <section>
             <h3 class="titre-section titre-section--entree">ENTRÉES</h3>
